# pytrim

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PYPI_RELEASE.md
examples/sample_project/: worker.py
scripts/: benchmark.py
src/project_doctor/: __init__.py  analyze.py  cli.py  context.py  dependencies.py  entrypoint.py  import_timing.py  models.py  report.py  static_scan.py  utils.py  uv.py
src/pytrim/: __init__.py  analyze.py  cli.py  dependencies.py  import_timing.py  report.py
tests/: test_basic.py  test_performance_features.py  test_release_branding.py  test_wow_entrypoint_uv.py
