[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "project-doctor"
version = "0.6.0"
description = "A local-first health checker for Python imports, dependencies, startup time, and package bloat."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Project Doctor maintainers" }
]
keywords = ["python", "performance", "imports", "dependencies", "optimizer", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Software Distribution",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/billjamesevans/project-doctor"
Repository = "https://github.com/billjamesevans/project-doctor"
Issues = "https://github.com/billjamesevans/project-doctor/issues"
Changelog = "https://github.com/billjamesevans/project-doctor/releases"

[project.optional-dependencies]
dev = [
  "bandit>=1.9",
  "build>=1.2",
  "mypy>=2.1",
  "pytest>=9",
  "ruff>=0.14",
  "twine>=6",
]
security = [
  "detect-secrets>=1.5",
  "pip-audit>=2.10",
]

[project.scripts]
project-doctor = "project_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
project_doctor = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
